--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@vituum/vite-plugin-nunjucks": "^1.1.0",
+    "reset-css": "^5.0.2",
+    "sass": "^1.75.0",
     "vite": "^5.2.0",
     "vituum": "^1.1.0"
   }
