--- a/package.json
+++ b/package.json
@@ -6,13 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postcss": "postcss dist/assets/**/*.css --dir dist/assets --ext optimized.css"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^6.0.0",
     "@vituum/vite-plugin-nunjucks": "^1.1.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0",
     "reset-css": "^5.0.2",
     "sass": "^1.75.0",
     "vite": "^5.2.0",
     "vituum": "^1.1.0"
-  }
+  },
+  "browserslist": [
+    "last 2 version",
+    "ie >= 11",
+    "iOS >= 8.1",
+    "Android >= 4.4"
+  ]
 }
