--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "vituum-practice",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint:html": "markuplint dist/**/*.html",
     "lint:njk": "markuplint src/**/*.njk",
+    "fix": "run-s fix:*",
+    "fix:stylelint": "stylelint --fix src/**/*.{css,scss,sass}",
     "format:css": "postcss dist/assets/**/*.css --dir dist/assets --ext optimized.css"
   },
   "devDependencies": {
@@ -17,10 +18,15 @@
     "@vituum/vite-plugin-nunjucks": "^1.1.0",
     "autoprefixer": "^10.4.19",
     "markuplint": "^4.6.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "reset-css": "^5.0.2",
     "sass": "^1.75.0",
+    "stylelint": "^16.4.0",
+    "stylelint-config-recess-order": "^5.0.1",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-recommended-scss": "^14.0.0",
     "vite": "^5.2.0",
     "vituum": "^1.1.0"
   },
