--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview",
     "lint:html": "markuplint dist/**/*.html",
     "lint:njk": "markuplint src/**/*.njk",
+    "lint:stylelint": "stylelint src/**/*.{css,scss,sass}",
     "fix": "run-s fix:*",
     "fix:stylelint": "stylelint --fix src/**/*.{css,scss,sass}",
+    "fix:prettier": "prettier --write './src/**/*.{js,ts,css,scss,sass,vue}'",
     "format:css": "postcss dist/assets/**/*.css --dir dist/assets --ext optimized.css"
   },
   "devDependencies": {
@@ -21,6 +23,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
+    "prettier": "3.2.5",
     "reset-css": "^5.0.2",
     "sass": "^1.75.0",
     "stylelint": "^16.4.0",
