--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "fix": "run-s fix:*",
     "fix:stylelint": "stylelint --fix src/**/*.{css,scss,sass}",
     "fix:eslint": "eslint --fix src/**/*.{js,vue}",
-    "fix:prettier": "prettier --write './src/**/*.{js,ts,css,scss,sass,vue}'",
+    "fix:prettier": "prettier --write src/**/*.{js,ts,css,scss,sass,vue}",
+    "format:html": "js-beautify dist/**/*.html",
     "format:css": "postcss dist/assets/**/*.css --dir dist/assets --ext optimized.css"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^9.1.1",
     "globals": "^15.1.0",
+    "js-beautify": "^1.15.1",
     "markuplint": "^4.6.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
