--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fix": "run-s fix:*",
     "fix:stylelint": "stylelint --fix src/**/*.{css,scss,sass}",
     "fix:eslint": "eslint --fix src/**/*.{js,vue}",
-    "fix:prettier": "prettier --write src/**/*.{js,ts,css,scss,sass,vue}",
+    "fix:prettier": "prettier --write src/**/*.{css,scss,sass,js,vue}",
     "format:html": "js-beautify dist/**/*.html",
     "format:css": "postcss dist/assets/**/*.css --dir dist/assets/css --ext optimized.css"
   },
