--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "run-s lint:*",
-    "lint:html": "markuplint dist/**/*.html",
+    "lint:html": "markuplint dist/**/*.html && html-validate dist/**/*.html",
     "lint:stylelint": "stylelint src/**/*.{css,scss,sass}",
     "lint:eslint": "eslint src/**/*.{js,vue}",
     "fix": "run-s fix:*",
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^9.1.1",
     "globals": "^15.1.0",
+    "html-validate": "^8.18.2",
     "js-beautify": "^1.15.1",
     "markuplint": "^4.6.1",
     "npm-run-all": "^4.1.5",
