--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-s build:*",
+    "build": "run-s build:* && run-s build:format:*",
     "build:vite": "vite build",
-    "build:format-html": "js-beautify dist/**/*.html",
-    "build:format-css": "postcss dist/assets/**/*.css --dir dist/assets/css --ext css",
+    "build:format:html": "js-beautify dist/**/*.html && node node-scripts/minify-html-code.mjs",
+    "build:format:css": "postcss dist/assets/**/*.css --dir dist/assets/css --ext css",
     "preview": "vite preview",
     "lint": "run-s lint:*",
     "lint:html": "markuplint dist/**/*.html && html-validate dist/**/*.html",
@@ -25,11 +25,14 @@
     "@markuplint/nunjucks-parser": "^4.5.1",
     "@vituum/vite-plugin-nunjucks": "^1.1.0",
     "autoprefixer": "^10.4.19",
+    "cheerio": "^1.0.0-rc.12",
+    "clean-css": "^5.3.3",
     "eslint": "^9.1.1",
     "globals": "^15.1.0",
     "html-validate": "^8.18.2",
     "js-beautify": "^1.15.1",
     "markuplint": "^4.6.1",
+    "minify-inline-json": "^1.1.11",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
@@ -40,6 +43,7 @@
     "stylelint-config-recess-order": "^5.0.1",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-recommended-scss": "^14.0.0",
+    "terser": "^5.31.0",
     "vite": "^5.2.0",
     "vituum": "^1.1.0"
   },
