--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@eslint/js": "^9.1.1",
     "@fullhuman/postcss-purgecss": "^6.0.0",
     "@markuplint/nunjucks-parser": "^4.5.1",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vituum/vite-plugin-nunjucks": "^1.1.0",
     "autoprefixer": "^10.4.19",
     "cheerio": "^1.0.0-rc.12",
@@ -45,7 +46,8 @@
     "stylelint-config-recommended-scss": "^14.0.0",
     "terser": "^5.31.0",
     "vite": "^5.2.0",
-    "vituum": "^1.1.0"
+    "vituum": "^1.1.0",
+    "vue": "^3.4.26"
   },
   "browserslist": [
     "last 2 version",
