--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fix": "run-s fix:*",
     "fix:stylelint": "stylelint --fix src/**/*.{css,scss,sass}",
     "fix:eslint": "eslint --fix src/**/*.{js,vue}",
-    "fix:prettier": "prettier --write src/**/*.{css,scss,sass,js,vue}"
+    "fix:prettier": "prettier --write src/**/*.{css,scss,sass,js,vue}",
+    "image-min": "node node-scripts/image-min.mjs"
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
@@ -32,6 +33,11 @@
     "eslint-plugin-vue": "^9.25.0",
     "globals": "^15.1.0",
     "html-validate": "^8.18.2",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-keep-folder": "^5.3.2",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^10.0.1",
     "js-beautify": "^1.15.1",
     "markuplint": "^4.6.1",
     "minify-inline-json": "^1.1.11",
