--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "fix:stylelint": "stylelint --fix src/**/*.{css,scss,sass}",
     "fix:eslint": "eslint --fix src/**/*.{js,vue}",
     "fix:prettier": "prettier --write src/**/*.{css,scss,sass,js,vue}",
-    "image-min": "node node-scripts/image-min.mjs"
+    "image-min": "node node-scripts/image-min.mjs",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
@@ -33,6 +34,7 @@
     "eslint-plugin-vue": "^9.25.0",
     "globals": "^15.1.0",
     "html-validate": "^8.18.2",
+    "husky": "^9.0.11",
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-keep-folder": "^5.3.2",
     "imagemin-mozjpeg": "^10.0.0",
@@ -57,10 +59,7 @@
     "vue": "^3.4.26"
   },
   "browserslist": [
-    "last 2 version",
-    "ie >= 11",
-    "iOS >= 8.1",
-    "Android >= 4.4"
+    "last 2 version"
   ],
   "resolutions": {
     "strip-ansi": "6.0.0",
